<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".pages.Page_Diary">

    <ImageView
        android:id="@+id/btnBack11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQntIngerido" />

    <EditText
        android:id="@+id/txtHoraInicio"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:clickable="true"
        android:focusable="false"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/inicio"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngerido" />

    <EditText
        android:id="@+id/txtHoraFim"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext"
        android:clickable="true"
        android:focusable="false"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/fim"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngerido" />

    <TextView
        android:id="@+id/txtIngerido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:shadowColor="@color/black"
        android:text="@string/texto_acordado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <Button
        android:id="@+id/btnPronto"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/botao_pronto"
        android:textAllCaps="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraInicio" />

    <TextView
        android:id="@+id/txtQntIngerido"
        android:layout_width="317dp"
        android:layout_height="68dp"
        android:layout_marginTop="100dp"
        android:shadowColor="@color/black"
        android:text="@string/ingestao_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.emotionharmony.components.BottomMenuView
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Campo Peso -->

        <!-- Campo Horário Início -->

        <!-- Campo Horário Fim -->

        <!-- Placeholder CardView -->


        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icone_principal" />
    </com.example.emotionharmony.components.BottomMenuView>
</androidx.constraintlayout.widget.ConstraintLayout>
